--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon application.js",
+    "start": "node application.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "md5": "^2.3.0",
-    "nodemon": "^2.0.6",
-    "sqlite3": "^5.0.0"
+    "mongoose": "^5.11.2",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.6"
   }
 }
