--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.2",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.6"
   }
 }
